fixed hamburger menu on tablet view

--- a/frontend/src/components/common/header/index.css
+++ b/frontend/src/components/common/header/index.css
@@ -108,7 +108,7 @@ a.dropdown-item {
 /* responsiveness */
 @media all and (min-width: 768px) and (max-width: 2048px) {
   .align-links {
-    padding-left: 166px;
+    padding-left: 10px;
   }
 
   .ym-top {
